--- a/public/css/templatemo-space-dynamic.css
+++ b/public/css/templatemo-space-dynamic.css
@@ -259,7 +259,7 @@ header
 */
 
 .background-header {
-  background-color: var(--primary-color);!important;
+  background-color: var(--primary-color) !important;
   height: 80px!important;
   position: fixed!important;
   top: 0px;
@@ -287,7 +287,7 @@ header
   top: 0px;
   left: 0px;
   right: 0px;
-  z-index: 100;
+  z-index: 99999999 !important;
   height: 100px;
   -webkit-transition: all .5s ease 0s;
   -moz-transition: all .5s ease 0s;
